Fix all of the Spotify OAuth things and test it for real